# records

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  Rocket.toml  db-reset.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  floriaaan-discogs_collection-20250412-1022.csv  requests.md  sqlx-data.json
.cargo/: config.toml
.http/: health-check.http
.sqlx/: query-0a001d801d88bb337f03435a61bcdc263ba6574cbf96bd893953b7834465f854.json  query-0af2460d0a3a80171e2248a917e35f47fb50b987392ed0682c59718fbd47ffcf.json  query-0c052fb5ae86fc405e3dcc3b606988e980392ba6bfa01885a4c94708d0c1126d.json  query-1ceb1ac2ee30254bfb6363dfbec90207e9b369e714808eb6da0d5a41a9825248.json  query-204e7decd50fddc2668344e86e3906a29efb246d1fec8cb7e768d4eeed79cb92.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-33e7d629af8116b1d45d358aa12a9ce956e3f8a32cc5d561edfd7cdbbacc638e.json  query-3af3f6d2f20fc8546cacd10dd75c37e8b6b4771d7fe6124f1929c23c8112112d.json  query-3e320f021f38b70d25f6787678a69cab5446ae92e65af1e7f75bec6c8de39955.json  query-51e512818863311eb18546ab22b7e88faee5587d2da80cc61bbb0c7740638ccd.json  query-52958684fa52b7a4753cd4356482dc6c655102a501d8aa48e03b1fb3dbbad02d.json  query-5df0c5e9860bc1c5c7f69116dd25ce388c723df37d37072110230f48a92daed6.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-6773f0387757780e26daa79891295e927446b5e4409d818f8dbd027816546077.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  (+7 more)
http/: collection.http
src/: app.rs  (+4 more)
(+86 files in other folders)
